# PothosCore

./: .gitmodules  .travis.yml  AudioSink.cpp  AudioSource.cpp  BlockCache.cpp  BlockCache.hpp  BlockEval.hpp  BlockImpl_8hpp.html  BlockImpl_8hpp__dep__incl.map  BlockImpl_8hpp__dep__incl.md5  BlockImpl_8hpp__incl.map  BlockImpl_8hpp__incl.md5  BlockImpl_8hpp_source.html  BlockRegistry_8hpp.html  BlockRegistry_8hpp__dep__incl.map  BlockRegistry_8hpp__dep__incl.md5  BlockRegistry_8hpp__incl.map  BlockRegistry_8hpp__incl.md5  BlockRegistry_8hpp_source.html  BlockTree.cpp  Block_8hpp.html  Block_8hpp__dep__incl.map  Block_8hpp__dep__incl.md5  Block_8hpp__incl.map  Block_8hpp__incl.md5  Block_8hpp_source.html  BufferAccumulator_8hpp.html  BufferAccumulator_8hpp__dep__incl.map  BufferAccumulator_8hpp__dep__incl.md5  BufferAccumulator_8hpp__incl.map  BufferAccumulator_8hpp__incl.md5  BufferAccumulator_8hpp_source.html  BufferChunk_8hpp.html  BufferChunk_8hpp__dep__incl.map  BufferChunk_8hpp__dep__incl.md5  BufferChunk_8hpp__incl.map  BufferChunk_8hpp__incl.md5  BufferChunk_8hpp_source.html  BufferManager_8hpp.html  BufferManager_8hpp__dep__incl.map  (+1082 more)
apps/: CMakeLists.txt  PothosUtil.cpp  PothosUtil.hpp  PothosUtilDeviceInfo.cpp  PothosUtilDocParse.cpp  PothosUtilGenerateSIMDDispatchers.cpp  PothosUtilListModules.cpp  PothosUtilListTypeConversions.cpp  PothosUtilLoadModule.cpp  PothosUtilModuleInfo.cpp  PothosUtilPluginTree.cpp  PothosUtilProxyEnvironmentInfo.cpp  PothosUtilProxyServer.cpp  PothosUtilRunTopology.cpp  PothosUtilSIMDArchitectures.cpp  PothosUtilSIMDFeatures.cpp  PothosUtilSelfTests.cpp  PothosUtilSystemInfo.cpp
audio/: AudioSource.cpp  CMakeLists.txt  Changelog.txt  README.md
blocks/: CMakeLists.txt  Changelog.txt
blocks/digital/: CMakeLists.txt  FrameSync.cpp
blocks/event/: CMakeLists.txt  Evaluator.cpp  MessageToSignal.cpp  PeriodicTrigger.cpp  TestSignalsAndSlots.cpp
blocks/file/: BinaryFileSource.cpp  CMakeLists.txt
blocks/math/: Arithmetic.cpp
blocks/network/: CMakeLists.txt  NetworkSink.cpp  SocketEndpoint.cpp  SocketEndpoint.hpp  TestNetworkBlocks.cpp  TestNetworkTopology.cpp
blocks/packet/: CMakeLists.txt  (+2 more)
cmake/: CMakeLists.txt  FindPoco.cmake  PothosConfig.cmake  PothosLibraryConfig.cmake  PothosPythonBlockFactory.in.cpp  PothosPythonUtil.cmake  PothosStandardFlags.cmake  PothosUtil.cmake  SetupPoco.cmake  test_compiler.cpp
comms/: CMakeLists.txt  Changelog.txt  FixedUtils.hpp  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt  ExpandTmpl.py
java/: CMakeLists.txt  Changelog.txt  FindJNI.cmake  JavaProxy.hpp  TestJava.cpp
lib/: CMakeLists.txt  Exception.cpp  Init.cpp  Pothos.in.pc  Testing.cpp  WindowsDelayLoadedSymbols.cpp  basic_oarchive.cpp  basic_pointer_iserializer.cpp  basic_text_iprimitive.cpp  basic_text_wiprimitive.cpp  basic_xml_archive.cpp  basic_xml_grammar.ipp  binary_iarchive.cpp  binary_oarchive.cpp  binary_wiarchive.cpp  binary_woarchive.cpp  codecvt_null.cpp  extended_type_info.cpp  polymorphic_oarchive.cpp  shared_ptr_helper.cpp  stl_port.cpp  text_woarchive.cpp  xml_grammar.cpp  xml_iarchive.cpp  xml_oarchive.cpp  xml_wiarchive.cpp  xml_woarchive.cpp
opencl/: CMakeLists.txt  OpenClContextCache.cpp  OpenClKernel.cpp  OpenClKernel.hpp  TestOpenClBlocks.cpp
plotters/: .gitmodules  CMakeLists.txt  Changelog.txt
pothos-blocks/: CMakeLists.txt  Changelog.txt  README.md  TestNetworkTopology.cpp  TestProxyTopology.cpp  TestSignalsAndSlots.cpp  TestUnitTestBlocks.cpp
pothos-comms/: CMakeLists.txt
pothos-gui/: AffinityPanel.cpp  BlockCache.cpp  BlockCache.hpp  BlockTree.cpp  CMakeLists.txt  Changelog.txt  ColorUtils.cpp  ColorUtils.hpp  ExecutionEngine.cpp  ExecutionEngine.hpp  MainWindow.cpp  MainWindow.hpp  MessageWindow.cpp  PothosGui.cpp  PothosGui.hpp  PothosGuiUtils.cpp  PothosGuiUtils.hpp  PropertiesPanel.cpp  README.md  WindowSettings.cpp
pothos-java/: CMakeLists.txt  Changelog.txt  Containers.cpp  JavaConvert.cpp  JavaHandle.cpp  JavaHelper.cpp  JavaProxy.cpp  JavaProxy.hpp  README.md  TestJava.cpp
pothos-library/: CMakeLists.txt  Changelog.txt  README.md
pothos-opencl/: CMakeLists.txt  Changelog.txt  OpenClBlock.cpp  OpenClBufferManager.cpp  OpenClBufferManager.hpp  OpenClErrToStr.cpp  OpenClInfo.cpp  OpenClKernel.cpp  OpenClKernel.hpp  README.md  TestOpenClBlock.cpp  TestOpenClBlocks.cpp  add_numbers.cl
pothos-python/: CMakeLists.txt  Changelog.txt  ProxyHelpers.cpp  PyObjectUtils.hpp  PythonBlock.cpp  PythonConvert.cpp  PythonHandle.cpp  PythonProxy.cpp  PythonProxy.hpp  PythonSupport.in.hpp  README.md  TestPython.cpp  TestPythonBlock.cpp
pothos-sdr/: CMakeLists.txt  Changelog.txt  ChannelAligner.cpp  DemoController.cpp  Logger.cpp  RandomDropper.cpp  SDRBlock.cpp  SDRBlock.hpp  SDRBlockDesc.hpp  SDRInfo.cpp  SDRSink.cpp  SDRSinkBufferManager.hpp  SDRSource.cpp  SDRSourceBufferManager.hpp
pothos-serialization/: CMakeLists.txt  Changelog.txt
pothos-util/: BlockEval.cpp  BlockEval.hpp  CMakeLists.txt  Changelog.txt  ConvertContainers.cpp  DeviceInfoUtils.cpp  DocUtils.cpp  EvalEnvironment.cpp  EvalEnvironment.hpp  EvalEnvironmentListParsers.cpp  GccCompilerSupport.cpp  JSONSerialization.cpp  LinuxNumaInfo.cpp  TestDocUtils.cpp  TestEvalExpression.cpp  TestJSONSerialization.cpp  TopologyEngine.cpp  WindowFunction.cpp  WindowsGetLogicalProcessorInfo.cpp
pothos-widgets/: CMakeLists.txt  Changelog.txt  DropDown.cpp  Label.cpp  MyDoubleSlider.cpp  MyDoubleSlider.hpp  MyFFTUtils.cpp  MyFFTUtils.hpp  MyPlotPicker.cpp  MyPlotPicker.hpp  MyPlotUtils.cpp  MyPlotUtils.hpp  MyPlotterUtils.cpp  MyPlotterUtils.hpp  NumericEntry.cpp  QStringSupport.cpp  QwtSlider.cpp  README.md  RadioGroup.cpp  Slider.cpp  SliderEntry.cpp  TextDisplay.cpp
python/: CMakeLists.txt  Changelog.txt  PythonBlock.cpp  PythonConvert.cpp  PythonHandle.cpp  PythonProxy.hpp  TestPython.cpp
util/: CMakeLists.txt  Changelog.txt  EvalEnvironment.cpp  README.md  WindowsGetLogicalProcessorInfo.cpp
widgets/: CMakeLists.txt  Changelog.txt  PushButton.cpp  QStringSupport.cpp  README.md  RadioGroup.cpp  TextDisplay.cpp
(+13484 files in other folders)
